--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "template-fullstack": "file:.."
+    "template-fullstack": "file:..",
+    "swiper": "^9.0.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
