--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "husky": "^7.0.0"
   },
   "dependencies": {
-    "axios": "^1.3.2",
+    "axios": "^1.3.3",
+    "bootstrap": "^5.2.3",
     "swiper": "^9.0.4"
   }
 }
