--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,9 @@
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "template-fullstack": "file:..",
-    "swiper": "^9.0.4"
+    "react-icons": "^4.7.1",
+    "swiper": "^9.0.4",
+    "template-fullstack": "file:.."
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
