--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.2.3",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
+    "react-youtube": "^10.1.0",
     "swiper": "^9.0.5"
   }
 }
