--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.7.1",
+    "react-router-dom": "^6.8.2",
     "swiper": "^9.0.4",
     "template-fullstack": "file:.."
   },
